# hackathon-zkVerify

./: .gitignore  README.md  diagrams.md  docker-compose.yml  insomnia-collections.yaml  instructions_frontend.md  introduction.md
backend/: .env.sample  Dockerfile  README.md  instructions_backend.md  pyproject.toml  requirements.txt
backend/SPRINTS/: README.md
backend/SPRINTS/Sprint1/: goals.md  status.md  tasks.md
backend/SPRINTS/Sprint2/: goals.md  tasks.md
backend/SPRINTS/Sprint3/: goals.md  tasks.md
backend/SPRINTS/Sprint4/: goals.md  tasks.md
backend/api/: main.py  run.sh  test_api.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/circuits/gym_verify/: Nargo.toml  Prover.toml
backend/circuits/gym_verify/src/: main.nr  main.test.nr
backend/scripts/: bbup_install.sh
backend/src/: main.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/core/: config.py
backend/src/models/: gym.py
backend/src/routes/: __init__.py  gyms.py  proofs.py
backend/tests/: conftest.py  integration_test.py  test_api.py
contracts/: .env.sample  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol  README.md
contracts/src/: NoirVerifier.sol  ZkCheckin.sol
contracts/src/interfaces/: INoirVerifier.sol
contracts/src/mocks/: MockVerifier.sol
contracts/src/plonk/: UltraPlonk.sol
contracts/test/: ZkCheckin.t.sol
frontend/: package-lock.json  package.json
frontend/SPRINTS/: README.md
frontend/SPRINTS/Sprint1/: goals.md  tasks.md
scripts/: README.md  dev.sh
(+6 files in other folders)
